--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
+  },
+  "overrides": {
+    "rollup": "4.44.0"
   }
 }
